arp - use same length arp for different length chords